Add EJS file with improved contact panel formatting

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_KEY=AIzaSyBDObkDBU3pwBXZDMSOmUJknrLNqgtWBqY
-MONGODB_URI=mongodb+srv://benzenehimanshu:Yadav123@nexai.gvh8b.mongodb.net/
+MONGODB_URI=mongodb+srv://benzenehimanshu:Yadav123@cluster0.7ujci.mongodb.net/
+PORT=7000
